corrected overlapping button attempt 5

--- a/webpack/static/account_style.css
+++ b/webpack/static/account_style.css
@@ -1,5 +1,7 @@
-body{
+body,.__container{
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 .form{
